adapted project to java8